src/main/java/com/example/authpoo/error/EmailExistsException.java
package com.example.authpoo.error;

public class EmailExistsException extends Exception{
    public EmailExistsException(String email){
        super(String.format("Email %s already exists.", email));
    }
}
